--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "node-cache": "^5.1.2",
-    "nodemon": "^2.0.20",
-    "socket.io": "^4.6.1"
+    "nodemon": "^2.0.20"
   }
 }
